# face-pose-estimation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hdrs/: CameraCalibration.h  CircularBufferedDeque.h  Constants.h  CustomOptional.h  DrawFrame.h  Face.h  FaceSelector.h  FaceStorage.h  FaceStorageObjectInfo.h  FaceTracker.h  FaceTrackerBase.h  FaceTrackerTypes.h  FacemarkModels.h  HaarCascades.h  IFaceDetector.h  IFaceLandmarksDetector.h  IFaceSelector.h  IFilter.h  IJawPoseDetector.h  IMatchable.h  IPoseDetector.h  IdentityTracker.h  KalmanFilterWrapper.h  LinearFilter.h  Matcher.h  OpenCVFaceDetector.h  OpenCVFaceLandmarksDetector.h  PnPJawPoseDetector.h  PnPPoseDetector.h  PoseTransformation.h  Storage.h  StorageObjectInfo.h  Types.h
resources/FacemarkModels/: lbfmodel.xml
src/: CameraCalibration.cpp  CircularBufferedDeque.cpp  DrawFrame.cpp  Face.cpp  FaceSelector.cpp  FaceStorage.cpp  FaceTracker.cpp  FaceTrackerBase.cpp  IdentityTracker.cpp  KalmanFilterWrapper.cpp  LinearFilter.cpp  Matcher.cpp  OpenCVFaceDetector.cpp  OpenCVFaceLandmarksDetector.cpp  PnPJawPoseDetector.cpp  PnPPoseDetector.cpp  PoseTransformation.cpp  Storage.cpp
